“an handler” should be changed to “a handler” throughout the book.

--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -505,7 +505,7 @@ For example:
 -   In `inst/app/www/script.js`:
 
 ```{js 17-javascript-14, eval = FALSE, echo = TRUE}
-// We define an handler called "computed", that can be called 
+// We define a handler called "computed", that can be called 
 // from the server side of the {shiny} application
 Shiny.addCustomMessageHandler('computed', function(mess) {
   // The received value (in mess) is serialized in JSON, 
