“an header” should be changed to “a header” throughout the book.

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -434,7 +434,7 @@ mod_dataviz_ui <- function(
   id, 
   type = c("point", "hist", "boxplot", "bar")
 ) {
-  # Setting an header with the specified type of graph
+  # Setting a header with the specified type of graph
   h4(
     sprintf( "Create a geom_%s", type )
   ),
